[tool.poetry]
name = "timetable_kit"
version = "0.0.0.dev0"
description = "Kit for making printable timetables for trains and buses"
authors = ["Nathanael Nerode <ncn_floss10@fastmail.fm>"]
license = "GNU Affero General Public License v3.0 or later"

[tool.poetry.dependencies]
python = "^3.11"
gtfs-kit = ">=5.2.0"
pandas = ">=2.1.4"
Jinja2 = ">=3.1.2"
weasyprint = ">=60.2"
lxml = ">=5.0.0"
xdg-base-dirs = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = ">=23.12.1"
mypy = ">=1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
